[gd_scene load_steps=6 format=3 uid="uid://dy2xpjsdv1bsj"]

[ext_resource type="Script" uid="uid://c5gsic4wkg152" path="res://Utility/furniture_placer.gd" id="1_byntl"]
[ext_resource type="Texture2D" uid="uid://b8wumcn315do6" path="res://Assets/Textures/UI Textures/Fixtures/Checkout.png" id="2_iajld"]
[ext_resource type="Texture2D" uid="uid://cal4yeljuyvp1" path="res://Assets/Textures/UI Textures/Fixtures/Shelf.png" id="3_refmu"]
[ext_resource type="Texture2D" uid="uid://dwwb124gsx8y1" path="res://Assets/Textures/UI Textures/Fixtures/Computer.png" id="4_refmu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_byntl"]
bg_color = Color(0.375623, 0.503376, 0.949372, 1)
border_width_left = 5
border_width_top = 2
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.323993, 0.571874, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="FurniturePlacer" type="Node3D"]
script = ExtResource("1_byntl")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 10, 15, 10)
fov = 36.0
size = 10.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExitButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -48.0
offset_right = 59.0
offset_bottom = -18.0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_byntl")
text = "EXIT"

[node name="ItemList" type="ItemList" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -158.0
offset_right = 146.0
offset_bottom = 142.0
grow_vertical = 2
allow_reselect = true
item_count = 3
icon_scale = 0.3
item_0/text = "500ðŸª™"
item_0/icon = ExtResource("2_iajld")
item_1/text = "200ðŸª™"
item_1/icon = ExtResource("3_refmu")
item_2/text = "500ðŸª™"
item_2/icon = ExtResource("4_refmu")

[node name="Cursor" type="Node3D" parent="."]

[connection signal="pressed" from="Control/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="Control/ItemList" to="." method="_on_item_list_item_selected"]
